--- a/exer4.ipynb
+++ b/exer4.ipynb
@@ -601,13 +601,7 @@
       "8982/8982 [==============================] - 30s - loss: 0.4399 - acc: 0.8652    \n",
       "Epoch 86/100\n",
       "8982/8982 [==============================] - 30s - loss: 0.4446 - acc: 0.8633    \n",
-      "Epoch 87/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 87/100\n",
       "8982/8982 [==============================] - 30s - loss: 0.4506 - acc: 0.8611    \n",
       "Epoch 88/100\n",
       "8982/8982 [==============================] - 30s - loss: 0.4452 - acc: 0.8599    \n",
@@ -972,13 +966,7 @@
       "8982/8982 [==============================] - 33s - loss: 0.1087 - acc: 0.9536    \n",
       "Epoch 86/100\n",
       "8982/8982 [==============================] - 33s - loss: 0.1125 - acc: 0.9540    \n",
-      "Epoch 87/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 87/100\n",
       "8982/8982 [==============================] - 31s - loss: 0.1192 - acc: 0.9519    \n",
       "Epoch 88/100\n",
       "8982/8982 [==============================] - 33s - loss: 0.1207 - acc: 0.9522    \n",
@@ -1343,13 +1331,7 @@
       "8982/8982 [==============================] - 32s - loss: 0.1262 - acc: 0.9502    \n",
       "Epoch 86/100\n",
       "8982/8982 [==============================] - 32s - loss: 0.1211 - acc: 0.9521    \n",
-      "Epoch 87/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 87/100\n",
       "8982/8982 [==============================] - 32s - loss: 0.1180 - acc: 0.9541    \n",
       "Epoch 88/100\n",
       "8982/8982 [==============================] - 32s - loss: 0.1209 - acc: 0.9529    \n",
@@ -1472,11 +1454,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Exercise 4, I refer to some online materials, documents and codes to help me form the model. However, as what is showed above, they did not perform as good as the outcomes of models in the previous exercises. I suppose there may be some procedure during the model and representation configuration. Nevertheless, I will document what I have done so far.\n",
+    "In Exercise 4, I refer to some online materials, documents and codes to help me form the model. However, as what is showed above, they did not perform as good as the outcomes of models in the previous exercises. I suppose there may be some procedure during data pre-processing, the model construction and representation configuration. Nevertheless, I will document what I have done so far.\n",
     "\n",
-    "Since I would like to use GloVe embedding, I first construct key-value pairs of words, which is dict object in python, and embedding vectors instead of connecting them together as what is performed in the given code. Next, I re-organize the word index so that I can use them to construct embedding matrix with GloVe vectors. Basically, I did it by reversing the key-value pair of the original word-index. I noticed that the numbers of words in each wire are not unified. In addition, according to the given code and documentation of Keras, oov_char is the word which is used to fill up short sentence so that length of sentence can be unified. I, therefore, use 2 to pad all the X. The example of one newswire eventually output something meaningful.\n",
+    "Since I would like to use GloVe embedding, I first construct key-value pairs of words, which is dict object in python, and embedding vectors instead of connecting them together as what is performed in the given code. Next, I re-organize the word index so that I can use them to construct embedding matrix with GloVe vectors. Basically, I did it by reversing the key-value pair of the original word-index. I noticed that the numbers of words in each wire are not unified. In addition, according to the given code and documentation of Keras, oov_char is the word which is used to fill up short sentence so that length of sentence can be unified. I, therefore, use 2 to pad all the X. The example of one newswire eventually output something meaningful. I then match the word and GloVe vector accordingly to form the embedding matrix so that it can be used in the following CNNs.\n",
     "\n",
-    "I create 3 variant of CNN. For those three, I choose to use a simpler sequential CNN model structure. The main reason is that a simpler model will take less time to train. Another reason is that the accuracy of the simpler model is surprisingly better than some other complex models. Another reason is that the model I use showed an increasing trend after 20 epochs for all variants. I think with more epochs the result can be improved. I did not try the model which is used in the article \"Convolutional Neural Networks for Sentence Classification\". But the outcomes of some reference materials seem to be very promising. \n",
+    "I create 3 variant of CNN, non-trainable(static), trainable(non-static) and random. For those three, I choose to use a simpler sequential CNN model structure after embedding layer. The main reason is that a simpler model will take less time to train. Another reason is that the accuracy of the simpler model is surprisingly better than some other complex models. Another reason is that the model I use showed an increasing trend after 20 epochs for all variants. I think with more epochs the result can be improved. I did not try the model which is used in the article \"Convolutional Neural Networks for Sentence Classification\". But the outcomes of some reference materials seem to be very promising.\n",
     "\n",
     "|Variant|Accuracy|\n",
     "|---|---|\n",
@@ -1486,7 +1468,11 @@
     "\n",
     "The result of these three variants, from my point of view, is quite wrong. The non-trainable variant has the lowest accuracy and the accuracies of the trainable and random variant are almost the same, which is exactly opposite to the observation of article \"Convolutional Neural Networks for Sentence Classification\". On the other hand, none of them obtain a higher accuracy than 80%, while the obervation of the article and some other experiments show that the accuracies are all above 80%. Although the data source may be completely different from what I use now, the result is still \n",
     "\n",
-    "I think could be several reasons for the above outcomes. One reason is, of course, my model is not sophisticated enough to handle the dataset. Some of my reference materials and codes suggest using a parallel model instead of a sequential model, which may be an approach to improve the accuracy. Another reason may be due to my misunderstanding on appling embedding matrix. There are several ways to do that either with the non-static or static approach. For example, the code of <a href=\"https://github.com/alexander-rakhlin/CNN-for-Sentence-Classification-in-Keras\"> this link</a> uses the same way as I did to apply non-static embedding matrix, while, for static, it reconstructs x_train with embedding vector in the order of words and feed this as input. Another <a href=\"https://github.com/fchollet/keras/issues/1515\">material</a> suggests that by setting the argument of \"trainable\", we can decide whether the model is static or non-static. Both of them seems to make sense. But I choose to implement the model with the latter approach. The third reason, I suppose, is due to the small scale of our dataset. We only have around 11 thousand data. One-fifth of all data has to be the test set, which only left us with less than 9 thousand data and this may not be a big number for training. Despite a larger dataset will surely lead to a longer pre-processing time, it may get us a much better result."
+    "I think could be several reasons for the above outcomes:\n",
+    "* One reason is, of course, my model is not sophisticated enough to handle the dataset. Some of my reference materials and codes suggest using a parallel model instead of a sequential model, which may be an approach to improve the accuracy.\n",
+    "* Another reason may be due to my misunderstanding on appling embedding matrix. There are several ways to do that either with the non-static or static approach. For example, the code of <a href=\"https://github.com/alexander-rakhlin/CNN-for-Sentence-Classification-in-Keras\"> this link</a> uses the same way as I did to apply non-static embedding matrix, while, for static, it reconstructs x_train with embedding vector in the order of words and feed this as input. Another <a href=\"https://github.com/fchollet/keras/issues/1515\">material</a> suggests that by setting the argument of \"trainable\", we can decide whether the model is static or non-static. Both of them seems to make sense. But I choose to implement the model with the latter approach. \n",
+    "* The third reason, I suppose, is due to the small scale of our dataset. We only have around 11 thousand data. One-fifth of all data has to be the test set, which only left us with less than 9 thousand data and this may not be a big number for training. Despite a larger dataset will surely lead to a longer pre-processing time, it may get us a much better result.\n",
+    "* As I mentioned above, it is possible that there exists some other configuration or data processing mistake. Though I spent much time on trying to figure out the method of applying GloVe embedding and the correct form of representation of X, I still can not be sure everything is on the right track."
    ]
   }
  ],
