--- a/exer4.ipynb
+++ b/exer4.ipynb
@@ -1466,7 +1466,7 @@
     "|Trainable|71.7%|\n",
     "|Random|71.7%|\n",
     "\n",
-    "The result of these three variants, from my point of view, is quite wrong. The non-trainable variant has the lowest accuracy and the accuracies of the trainable and random variant are almost the same, which is exactly opposite to the observation of article \"Convolutional Neural Networks for Sentence Classification\". On the other hand, none of them obtain a higher accuracy than 80%, while the obervation of the article and some other experiments show that the accuracies are all above 80%. Although the data source may be completely different from what I use now, the result is still \n",
+    "The result of these three variants, from my point of view, is quite awful. The non-trainable variant has the lowest accuracy and the accuracies of the trainable and random variant are almost the same, which is exactly opposite to the observation of article \"Convolutional Neural Networks for Sentence Classification\". On the other hand, none of them obtain a higher accuracy than 80%, while the obervation of the article and some other experiments show that the accuracies are all above 80%. Although the data source may be completely different from what I use now, the result is still not what I expected.\n",
     "\n",
     "I think could be several reasons for the above outcomes:\n",
     "* One reason is, of course, my model is not sophisticated enough to handle the dataset. Some of my reference materials and codes suggest using a parallel model instead of a sequential model, which may be an approach to improve the accuracy.\n",
