--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -167,9 +167,27 @@
    "outputs": [],
    "source": [
     "train_val_ratio = 0.8 #train:vad = 0.8\n",
-    "x_train_list, x_val_list, y_train, y_val = train_test_split(img_list,labels,test_size = 1-train_val_ratio,shuffle=True)\n",
+    "img_size = (64,64)\n",
     "\n",
-    "plt.imshow(misc.imread(x_train_list[0],mode=\"RGB\")[:,:,0])\n",
+    "x_train_list, x_val_list, y_train, y_val = train_test_split(img_list,labels,test_size = 1-train_val_ratio,shuffle=True)\n",
+    "image_load_func = lambda path: misc.imresize(misc.imread(path,mode=\"RGB\"),size=img_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img0 = image_load_func(x_train_list[0])\n",
+    "for l in range(3):\n",
+    "    plt.subplot(1, 4, l+1)\n",
+    "    plt.imshow(img0[:,:,l])\n",
+    "    plt.axis('off')\n",
+    "plt.subplot(1, 4, 4)\n",
+    "plt.imshow(img0)\n",
+    "plt.axis('off')\n",
+    "\n",
     "if sum(y_train[0]==1)==0:\n",
     "    print(\"No label\")\n",
     "else:\n",
@@ -183,8 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = np.stack([misc.imread(file,mode=\"RGB\") for file in x_train_list])\n",
-    "x_val = np.stack([misc.imread(file,mode=\"RGB\") for file in x_val_list])\n",
+    "x_train = np.stack([image_load_func(file) for file in x_train_list])\n",
+    "x_val = np.stack([image_load_func(file) for file in x_val_list])\n",
     "print(x_train.shape,x_val.shape)"
    ]
   },
@@ -201,7 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from densenet import *"
+    "from densenet import *\n",
+    "opt = Adam(lr=1e-2, beta_1=0.9, beta_2=0.999, epsilon=1e-08)"
    ]
   },
   {
@@ -217,6 +236,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nb_filter=32\n",
+    "weight_decay=0.00001\n",
+    "dropout_rate=0.2\n",
+    "nb_dense_block=3\n",
+    "nb_layers=4\n",
+    "growth_rate=1\n",
+    "\n",
     "model = DenseNet(num_class, x_train.shape[1:], 4, nb_dense_block, growth_rate,\n",
     "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
     "model.compile(loss='categorical_crossentropy', \n",
@@ -382,14 +408,14 @@
    "outputs": [],
    "source": [
     "model=Sequential()\n",
-    "model.add(Conv2D(filters=32, kernel_size=(3, 3), input_shape=(128, 128, 3),activation=\"relu\"))\n",
+    "model.add(Conv2D(filters=32, kernel_size=(3, 3), input_shape=x_train.shape[1:],activation=\"relu\"))\n",
     "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(num_class,activation=\"sigmoid\"))\n",
     "\n",
     "\n",
     "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer='adam', \n",
+    "              optimizer=opt, \n",
     "              metrics=['accuracy'])\n",
     "print(model.summary())"
    ]
