--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -89,13 +89,14 @@
     "from keras.layers.convolutional import *\n",
     "from keras.preprocessing.image import *\n",
     "from keras import backend as K\n",
-    "\n",
+    "from keras.utils.vis_utils import model_to_dot\n",
     "from keras.utils import np_utils\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from scipy import misc\n",
-    "from sklearn.metrics import f1_score"
+    "from sklearn.metrics import f1_score\n",
+    "from IPython.display import SVG"
    ]
   },
   {
@@ -167,7 +168,7 @@
    "outputs": [],
    "source": [
     "train_val_ratio = 0.8 #train:vad = 0.8\n",
-    "img_size = (64,64)\n",
+    "img_size = (32,32)\n",
     "\n",
     "x_train_list, x_val_list, y_train, y_val = train_test_split(img_list,labels,test_size = 1-train_val_ratio,shuffle=True)\n",
     "image_load_func = lambda path: misc.imresize(misc.imread(path,mode=\"RGB\"),size=img_size)"
@@ -219,8 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from densenet import *\n",
-    "opt = Adam(lr=1e-2, beta_1=0.9, beta_2=0.999, epsilon=1e-08)"
+    "from densenet import *"
    ]
   },
   {
@@ -240,16 +240,24 @@
     "weight_decay=0.00001\n",
     "dropout_rate=0.2\n",
     "nb_dense_block=3\n",
-    "nb_layers=4\n",
-    "growth_rate=1\n",
+    "nb_layers=2\n",
+    "growth_rate=12\n",
     "\n",
-    "model = DenseNet(num_class, x_train.shape[1:], 4, nb_dense_block, growth_rate,\n",
+    "model = DenseNet(num_class, x_train.shape[1:], nb_layers*3+4, nb_dense_block, growth_rate,\n",
     "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
     "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer='adam', \n",
-    "              metrics=['accuracy'])\n",
+    "              optimizer='adam')\n",
     "\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVG(model_to_dot(model, show_shapes=True).create(prog='dot', format='svg'))"
    ]
   },
   {
@@ -277,11 +285,7 @@
    "source": [
     "plt.figure(figsize=(5,3))\n",
     "plt.plot(history.epoch,history.history['loss'])\n",
-    "plt.title('loss')\n",
-    "\n",
-    "plt.figure(figsize=(5,3))\n",
-    "plt.plot(history.epoch,history.history['acc'])\n",
-    "plt.title('accuracy')"
+    "plt.title('loss')"
    ]
   },
   {
@@ -311,7 +315,7 @@
     "weight_decay=0.00001\n",
     "dropout_rate=0.2\n",
     "nb_dense_block=3\n",
-    "nb_layers=4\n",
+    "nb_layers=2\n",
     "growth_rate=1\n",
     "\n",
     "\n",
@@ -323,7 +327,7 @@
     "               name=\"initial_conv2D\",\n",
     "               use_bias=True,\n",
     "               kernel_regularizer=l2(weight_decay))(model_input)\n",
-    "\n",
+    "#blocks\n",
     "for block_idx in range(nb_dense_block - 1):\n",
     "    x, nb_filter = denseblock(x, nb_layers, nb_filter, growth_rate,\n",
     "                              dropout_rate=dropout_rate)\n",
@@ -331,7 +335,7 @@
     "    x = transition(x, nb_filter, dropout_rate=dropout_rate,\n",
     "                   weight_decay=weight_decay)\n",
     "\n",
-    "    \n",
+    "#last block \n",
     "x, nb_filter = denseblock(x, nb_layers, nb_filter, growth_rate,\n",
     "                              dropout_rate=dropout_rate,\n",
     "                              weight_decay=weight_decay)\n",
@@ -341,15 +345,25 @@
     "                       beta_regularizer=l2(weight_decay))(x)\n",
     "x = Activation('relu')(x)\n",
     "x = GlobalAveragePooling2D(data_format=K.image_data_format())(x)\n",
+    "#linear\n",
+    "\n",
     "model_output = Dense(num_class, activation='sigmoid')(x)\n",
     "\n",
     "model = Model(inputs=[model_input], outputs=[model_output], name=\"DenseNet\")\n",
     "\n",
     "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer='adam', \n",
-    "              metrics=['accuracy'])\n",
+    "              optimizer='adam')\n",
     "\n",
     "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVG(model_to_dot(model, show_shapes=True).create(prog='dot', format='svg'))"
    ]
   },
   {
@@ -377,11 +391,7 @@
    "source": [
     "plt.figure(figsize=(5,3))\n",
     "plt.plot(history.epoch,history.history['loss'])\n",
-    "plt.title('loss')\n",
-    "\n",
-    "plt.figure(figsize=(5,3))\n",
-    "plt.plot(history.epoch,history.history['acc'])\n",
-    "plt.title('accuracy')"
+    "plt.title('loss')"
    ]
   },
   {
@@ -415,8 +425,7 @@
     "\n",
     "\n",
     "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer=opt, \n",
-    "              metrics=['accuracy'])\n",
+    "              optimizer=opt)\n",
     "print(model.summary())"
    ]
   },
@@ -445,11 +454,7 @@
    "source": [
     "plt.figure(figsize=(5,3))\n",
     "plt.plot(history.epoch,history.history['loss'])\n",
-    "plt.title('loss')\n",
-    "\n",
-    "plt.figure(figsize=(5,3))\n",
-    "plt.plot(history.epoch,history.history['acc'])\n",
-    "plt.title('accuracy')"
+    "plt.title('loss')"
    ]
   },
   {
