--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -93,7 +93,7 @@
     "from keras.utils import np_utils\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
     "from scipy import misc\n",
     "from sklearn.metrics import f1_score\n",
     "from IPython.display import SVG"
@@ -146,19 +146,19 @@
     "\n",
     "\n",
     "img_list = [database_path+\"images/\"+\"im\"+str(x)+\".jpg\" for x in range(1,N+1)]\n",
-    "labels = np.zeros((N,num_class))\n",
+    "y = np.zeros((N,num_class))\n",
     "\n",
     "for k,v in class_indices.items():\n",
     "    with open(database_path+\"annotations/\"+v+\".txt\",\"r\") as fp:\n",
     "        for line in fp:\n",
-    "            labels[int(line)-1,k] = 1"
+    "            y[int(line)-1,k] = 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Spliting train set and validation set"
+    "#### Loading dataset"
    ]
   },
   {
@@ -167,10 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_val_ratio = 0.8 #train:vad = 0.8\n",
     "img_size = (32,32)\n",
     "\n",
-    "x_train_list, x_val_list, y_train, y_val = train_test_split(img_list,labels,test_size = 1-train_val_ratio,shuffle=True)\n",
     "image_load_func = lambda path: misc.imresize(misc.imread(path,mode=\"RGB\"),size=img_size)"
    ]
   },
@@ -180,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img0 = image_load_func(x_train_list[0])\n",
+    "img0 = image_load_func(img_list[0])\n",
     "for l in range(3):\n",
     "    plt.subplot(1, 4, l+1)\n",
     "    plt.imshow(img0[:,:,l])\n",
@@ -189,10 +187,10 @@
     "plt.imshow(img0)\n",
     "plt.axis('off')\n",
     "\n",
-    "if sum(y_train[0]==1)==0:\n",
+    "if sum(y[0]==1)==0:\n",
     "    print(\"No label\")\n",
     "else:\n",
-    "    for i in np.argwhere(y_train[0]==1).flatten():\n",
+    "    for i in np.argwhere(y[0]==1).flatten():\n",
     "        print(class_indices[i])"
    ]
   },
@@ -202,9 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = np.stack([image_load_func(file) for file in x_train_list])\n",
-    "x_val = np.stack([image_load_func(file) for file in x_val_list])\n",
-    "print(x_train.shape,x_val.shape)"
+    "X = np.stack([image_load_func(file) for file in img_list])\n",
+    "print(X.shape)"
    ]
   },
   {
@@ -243,12 +240,12 @@
     "nb_layers=2\n",
     "growth_rate=12\n",
     "\n",
-    "model = DenseNet(num_class, x_train.shape[1:], nb_layers*3+4, nb_dense_block, growth_rate,\n",
+    "dn = DenseNet(num_class, X.shape[1:], nb_layers*3+4, nb_dense_block, growth_rate,\n",
     "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
-    "model.compile(loss='categorical_crossentropy', \n",
+    "dn.compile(loss='binary_crossentropy', \n",
     "              optimizer='adam')\n",
     "\n",
-    "print(model.summary())"
+    "print(dn.summary())"
    ]
   },
   {
@@ -257,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVG(model_to_dot(model, show_shapes=True).create(prog='dot', format='svg'))"
+    "SVG(model_to_dot(dn, show_shapes=True).create(prog='dot', format='svg'))"
    ]
   },
   {
@@ -270,11 +267,17 @@
     "\n",
     "epochs = 3\n",
     "\n",
-    "history = model.fit(x_train, \n",
-    "                    y_train, \n",
-    "                    epochs=epochs, \n",
-    "                    batch_size=64,\n",
-    "                    verbose=1)"
+    "history = dn.fit(X,y,epochs=epochs,batch_size=64,verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = dn.predict(X[500:530])\n",
+    "print(y_pred)"
    ]
   },
   {
@@ -294,8 +297,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = np.rint(model.predict(x_val))\n",
-    "print(\"micro averaged f1 score:\", f1_score(y_val, y_pred, average='micro'))"
+    "%%time\n",
+    "\n",
+    "nb_filter=32\n",
+    "weight_decay=0.00001\n",
+    "dropout_rate=0.2\n",
+    "nb_dense_block=3\n",
+    "nb_layers=2\n",
+    "growth_rate=12\n",
+    "\n",
+    "epochs = 3\n",
+    "#5-fold cross validation\n",
+    "score = []\n",
+    "kf = KFold(n_splits=5,shuffle=True)\n",
+    "for train,val in kf.split(X, y):\n",
+    "    dn = DenseNet(num_class, X.shape[1:], nb_layers*3+4, nb_dense_block, growth_rate,\n",
+    "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
+    "    dn.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "    dn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
+    "    y_pred = np.rint(model.predict(X[test]))\n",
+    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
+    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
    ]
   },
   {
@@ -311,50 +333,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_filter=32\n",
-    "weight_decay=0.00001\n",
-    "dropout_rate=0.2\n",
-    "nb_dense_block=3\n",
-    "nb_layers=2\n",
-    "growth_rate=1\n",
+    "def getCutmoizedDenseNet():\n",
+    "    nb_filter=32\n",
+    "    weight_decay=0.00001\n",
+    "    dropout_rate=0.2\n",
+    "    nb_dense_block=3\n",
+    "    nb_layers=2\n",
+    "    growth_rate=1\n",
+    "    \n",
+    "    model_input = Input(shape=X.shape[1:])\n",
     "\n",
+    "    x = Conv2D(nb_filter, (3, 3),\n",
+    "                   kernel_initializer=\"he_uniform\",\n",
+    "                   padding=\"same\",\n",
+    "                   name=\"initial_conv2D\",\n",
+    "                   use_bias=True,\n",
+    "                   kernel_regularizer=l2(weight_decay))(model_input)\n",
+    "    #blocks\n",
+    "    for block_idx in range(nb_dense_block - 1):\n",
+    "        x, nb_filter = denseblock(x, nb_layers, nb_filter, growth_rate,\n",
+    "                                  dropout_rate=dropout_rate)\n",
+    "        # add transition\n",
+    "        x = transition(x, nb_filter, dropout_rate=dropout_rate,\n",
+    "                       weight_decay=weight_decay)\n",
     "\n",
-    "model_input = Input(shape=x_train.shape[1:])\n",
-    "\n",
-    "x = Conv2D(nb_filter, (3, 3),\n",
-    "               kernel_initializer=\"he_uniform\",\n",
-    "               padding=\"same\",\n",
-    "               name=\"initial_conv2D\",\n",
-    "               use_bias=True,\n",
-    "               kernel_regularizer=l2(weight_decay))(model_input)\n",
-    "#blocks\n",
-    "for block_idx in range(nb_dense_block - 1):\n",
+    "    #last block \n",
     "    x, nb_filter = denseblock(x, nb_layers, nb_filter, growth_rate,\n",
-    "                              dropout_rate=dropout_rate)\n",
-    "    # add transition\n",
-    "    x = transition(x, nb_filter, dropout_rate=dropout_rate,\n",
-    "                   weight_decay=weight_decay)\n",
+    "                                  dropout_rate=dropout_rate,\n",
+    "                                  weight_decay=weight_decay)\n",
     "\n",
-    "#last block \n",
-    "x, nb_filter = denseblock(x, nb_layers, nb_filter, growth_rate,\n",
-    "                              dropout_rate=dropout_rate,\n",
-    "                              weight_decay=weight_decay)\n",
+    "    x = BatchNormalization(axis=1,\n",
+    "                           gamma_regularizer=l2(weight_decay),\n",
+    "                           beta_regularizer=l2(weight_decay))(x)\n",
+    "    x = Activation('relu')(x)\n",
+    "    x = GlobalAveragePooling2D(data_format=K.image_data_format())(x)\n",
+    "    #more layers\n",
     "\n",
-    "x = BatchNormalization(axis=1,\n",
-    "                       gamma_regularizer=l2(weight_decay),\n",
-    "                       beta_regularizer=l2(weight_decay))(x)\n",
-    "x = Activation('relu')(x)\n",
-    "x = GlobalAveragePooling2D(data_format=K.image_data_format())(x)\n",
-    "#linear\n",
+    "    model_output = Dense(num_class, activation='sigmoid')(x)\n",
     "\n",
-    "model_output = Dense(num_class, activation='sigmoid')(x)\n",
-    "\n",
-    "model = Model(inputs=[model_input], outputs=[model_output], name=\"DenseNet\")\n",
-    "\n",
-    "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer='adam')\n",
-    "\n",
-    "print(model.summary())"
+    "    model = Model(inputs=[model_input], outputs=[model_output], name=\"DenseNet\")\n",
+    "    \n",
+    "    return model"
    ]
   },
   {
@@ -363,7 +382,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVG(model_to_dot(model, show_shapes=True).create(prog='dot', format='svg'))"
+    "cdn=getCutmoizedDenseNet()\n",
+    "cdn.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "\n",
+    "print(cdn.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVG(model_to_dot(cdn, show_shapes=True).create(prog='dot', format='svg'))"
    ]
   },
   {
@@ -376,11 +407,7 @@
     "\n",
     "epochs = 3\n",
     "\n",
-    "history = model.fit(x_train, \n",
-    "                    y_train, \n",
-    "                    epochs=epochs, \n",
-    "                    batch_size=64,\n",
-    "                    verbose=1)"
+    "history = cdn.fit(X,y,epochs=epochs,batch_size=64,verbose=1)"
    ]
   },
   {
@@ -400,8 +427,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = np.rint(model.predict(x_val))\n",
-    "print(\"micro averaged f1 score:\", f1_score(y_val, y_pred, average='micro'))"
+    "%%time\n",
+    "\n",
+    "nb_filter=32\n",
+    "weight_decay=0.00001\n",
+    "dropout_rate=0.2\n",
+    "nb_dense_block=3\n",
+    "nb_layers=2\n",
+    "growth_rate=1\n",
+    "\n",
+    "epochs = 3\n",
+    "#5-fold cross validation\n",
+    "score = []\n",
+    "kf = KFold(n_splits=5,shuffle=True)\n",
+    "for train,val in kf.split(X, y):\n",
+    "    cdn=getCutmoizedDenseNet()\n",
+    "    cdn.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "    cdn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
+    "    y_pred = np.rint(cdn.predict(X[test]))\n",
+    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
+    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
    ]
   },
   {
@@ -417,16 +462,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=Sequential()\n",
-    "model.add(Conv2D(filters=32, kernel_size=(3, 3), input_shape=x_train.shape[1:],activation=\"relu\"))\n",
+    "def getConvNet():\n",
+    "    model=Sequential()\n",
+    "    model.add(Conv2D(filters=32, kernel_size=(3, 3), input_shape=x_train.shape[1:],activation=\"relu\"))\n",
     "\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(num_class,activation=\"sigmoid\"))\n",
-    "\n",
-    "\n",
-    "model.compile(loss='categorical_crossentropy', \n",
-    "              optimizer=opt)\n",
-    "print(model.summary())"
+    "    model.add(Flatten())\n",
+    "    model.add(Dense(num_class,activation=\"sigmoid\"))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn=getConvNet()\n",
+    "cn.compile(loss='binary_crossentropy',optimizer='adam')\n",
+    "print(cn.summary())"
    ]
   },
   {
@@ -439,11 +492,7 @@
     "\n",
     "epochs = 3\n",
     "\n",
-    "history = model.fit(x_train, \n",
-    "                    y_train, \n",
-    "                    epochs=epochs, \n",
-    "                    batch_size=64,\n",
-    "                    verbose=1)"
+    "history = cn.fit(X,y,epochs=epochs,batch_size=64,verbose=1)"
    ]
   },
   {
@@ -463,8 +512,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = np.rint(model.predict(x_val))\n",
-    "print(\"micro averaged f1 score:\", f1_score(y_val, y_pred, average='micro'))"
+    "%%time\n",
+    "\n",
+    "\n",
+    "epochs = 3\n",
+    "#5-fold cross validation\n",
+    "score = []\n",
+    "kf = KFold(n_splits=5,shuffle=True)\n",
+    "for train,val in kf.split(X, y):\n",
+    "    cn=getConvNet()\n",
+    "    cn.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "    cn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
+    "    y_pred = np.rint(cn.predict(X[test]))\n",
+    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
+    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
    ]
   },
   {
