--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_size = (32,32)\n",
+    "img_size = (64,64)\n",
     "\n",
     "image_load_func = lambda path: misc.imresize(misc.imread(path,mode=\"RGB\"),size=img_size)"
    ]
@@ -178,19 +178,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img0 = image_load_func(img_list[0])\n",
+    "example=3\n",
+    "img = image_load_func(img_list[example])\n",
     "for l in range(3):\n",
     "    plt.subplot(1, 4, l+1)\n",
-    "    plt.imshow(img0[:,:,l])\n",
+    "    plt.imshow(img[:,:,l])\n",
     "    plt.axis('off')\n",
     "plt.subplot(1, 4, 4)\n",
-    "plt.imshow(img0)\n",
+    "plt.imshow(img)\n",
     "plt.axis('off')\n",
     "\n",
-    "if sum(y[0]==1)==0:\n",
+    "if sum(y[example]==1)==0:\n",
     "    print(\"No label\")\n",
     "else:\n",
-    "    for i in np.argwhere(y[0]==1).flatten():\n",
+    "    for i in np.argwhere(y[example]==1).flatten():\n",
     "        print(class_indices[i])"
    ]
   },
@@ -218,6 +219,25 @@
    "outputs": [],
    "source": [
     "from densenet import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formalizePrediction(y_prob,y_true,threshold_interval):\n",
+    "    threshold = np.arange(0,1,threshold_interval)\n",
+    "\n",
+    "    best_threshold = np.zeros(y_true.shape[1])\n",
+    "    for i in range(y_prob.shape[1]):\n",
+    "        y_pred = np.array([[1 if prob>j else 0 for j in threshold] for prob in y_prob[:,i]])\n",
+    "        score = np.array([f1_score(y_true[:,i],y_pred[:,j], average='micro') for j in range(len(threshold)) ])\n",
+    "        best_threshold[i] = threshold[score.argmax()]\n",
+    "        print(\"Best threshold for class\",i,\"：\",best_threshold[i])\n",
+    "    y_pred = 1*(y_prob>best_threshold)\n",
+    "    return y_pred,best_threshold"
    ]
   },
   {
@@ -315,9 +335,11 @@
     "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
     "    dn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    dn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_pred = np.rint(model.predict(X[test]))\n",
-    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
-    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
+    "    y_train_prob = dn.predict_proba(X[train])\n",
+    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
+    "    y_val_pred = 1*(dn.predict_proba(X[val])>threshold)    \n",
+    "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
+    "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
   },
   {
@@ -444,9 +466,11 @@
     "    cdn=getCutmoizedDenseNet()\n",
     "    cdn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    cdn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_pred = np.rint(cdn.predict(X[test]))\n",
-    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
-    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
+    "    y_train_prob = cdn.predict_proba(X[train])\n",
+    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
+    "    y_val_pred = 1*(cdn.predict_proba(X[val])>threshold)    \n",
+    "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
+    "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
   },
   {
@@ -464,10 +488,19 @@
    "source": [
     "def getConvNet():\n",
     "    model=Sequential()\n",
-    "    model.add(Conv2D(filters=32, kernel_size=(3, 3), input_shape=x_train.shape[1:],activation=\"relu\"))\n",
-    "\n",
+    "    model.add(Conv2D(filters=32, kernel_size=(3, 3),padding='same', input_shape=X.shape[1:],activation=\"relu\"))\n",
+    "    model.add(Conv2D(filters=32, kernel_size=(3, 3),activation=\"relu\"))\n",
+    "    model.add(MaxPooling2D(2,2))\n",
+    "    model.add(Dropout(0.25))\n",
+    "    model.add(Conv2D(filters=64, kernel_size=(3, 3),activation=\"relu\"))\n",
+    "    model.add(Conv2D(filters=64, kernel_size=(3, 3),activation=\"relu\"))\n",
+    "    model.add(MaxPooling2D(2,2))\n",
+    "    model.add(Dropout(0.25))\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(num_class,activation=\"sigmoid\"))\n",
+    "    model.add(Dense(512,activation=\"relu\"))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(num_class))\n",
+    "    model.add(Activation(\"sigmoid\"))\n",
     "    return model"
    ]
   },
@@ -490,7 +523,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "epochs = 3\n",
+    "epochs = 10\n",
     "\n",
     "history = cn.fit(X,y,epochs=epochs,batch_size=64,verbose=1)"
    ]
@@ -515,7 +548,7 @@
     "%%time\n",
     "\n",
     "\n",
-    "epochs = 3\n",
+    "epochs = 10\n",
     "#5-fold cross validation\n",
     "score = []\n",
     "kf = KFold(n_splits=5,shuffle=True)\n",
@@ -523,9 +556,11 @@
     "    cn=getConvNet()\n",
     "    cn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    cn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_pred = np.rint(cn.predict(X[test]))\n",
-    "    score.append(f1_score(y[test], y_pred, average='micro'))\n",
-    "print(\"%.2f%% (+/- %.2f%%)\" % (np.mean(score), np.std(score)))"
+    "    y_train_prob = cn.predict_proba(X[train])\n",
+    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
+    "    y_val_pred = 1*(cn.predict_proba(X[val])>threshold)    \n",
+    "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
+    "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
   },
   {
