--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_size = (64,64)\n",
+    "img_size = (32,32)\n",
     "\n",
     "image_load_func = lambda path: misc.imresize(misc.imread(path,mode=\"RGB\"),size=img_size)"
    ]
@@ -227,17 +227,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def formalizePrediction(y_prob,y_true,threshold_interval):\n",
+    "def getThreshold(y_pred,y_true,threshold_interval):\n",
     "    threshold = np.arange(0,1,threshold_interval)\n",
     "\n",
     "    best_threshold = np.zeros(y_true.shape[1])\n",
-    "    for i in range(y_prob.shape[1]):\n",
-    "        y_pred = np.array([[1 if prob>j else 0 for j in threshold] for prob in y_prob[:,i]])\n",
-    "        score = np.array([f1_score(y_true[:,i],y_pred[:,j], average='micro') for j in range(len(threshold)) ])\n",
+    "    for i in range(y_pred.shape[1]):\n",
+    "        temp = np.array([[1 if pred>j else 0 for j in threshold] for pred in y_pred[:,i]])\n",
+    "        score = np.array([f1_score(y_true[:,i],temp[:,j], average='micro') for j in range(len(threshold)) ])\n",
     "        best_threshold[i] = threshold[score.argmax()]\n",
     "        print(\"Best threshold for class\",i,\"：\",best_threshold[i])\n",
-    "    y_pred = 1*(y_prob>best_threshold)\n",
-    "    return y_pred,best_threshold"
+    "    return best_threshold"
    ]
   },
   {
@@ -326,7 +325,7 @@
     "nb_layers=2\n",
     "growth_rate=12\n",
     "\n",
-    "epochs = 3\n",
+    "epochs = 1\n",
     "#5-fold cross validation\n",
     "score = []\n",
     "kf = KFold(n_splits=5,shuffle=True)\n",
@@ -335,9 +334,9 @@
     "             nb_filter, dropout_rate=None, weight_decay=1E-4)\n",
     "    dn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    dn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_train_prob = dn.predict_proba(X[train])\n",
-    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
-    "    y_val_pred = 1*(dn.predict_proba(X[val])>threshold)    \n",
+    "    y_train_pred = dn.predict(X[train],batch_size=32, verbose=1)\n",
+    "    threshold=getThreshold(y_train_pred,y[train],0.001)\n",
+    "    y_val_pred = 1*(dn.predict(X[val],batch_size=32, verbose=1)>threshold)    \n",
     "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
     "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
@@ -466,9 +465,9 @@
     "    cdn=getCutmoizedDenseNet()\n",
     "    cdn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    cdn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_train_prob = cdn.predict_proba(X[train])\n",
-    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
-    "    y_val_pred = 1*(cdn.predict_proba(X[val])>threshold)    \n",
+    "    y_train_pred = cdn.predict(X[train],batch_size=32, verbose=1)\n",
+    "    threshold=getThreshold(y_train_pred,y[train],0.001)\n",
+    "    y_val_pred = 1*(cdn.predict(X[val],batch_size=32, verbose=1)>threshold)    \n",
     "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
     "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
@@ -497,7 +496,9 @@
     "    model.add(MaxPooling2D(2,2))\n",
     "    model.add(Dropout(0.25))\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(512,activation=\"relu\"))\n",
+    "    model.add(Dense(512))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Activation(\"relu\"))\n",
     "    model.add(Dropout(0.5))\n",
     "    model.add(Dense(num_class))\n",
     "    model.add(Activation(\"sigmoid\"))\n",
@@ -523,7 +524,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "epochs = 10\n",
+    "epochs = 3\n",
     "\n",
     "history = cn.fit(X,y,epochs=epochs,batch_size=64,verbose=1)"
    ]
@@ -548,7 +549,7 @@
     "%%time\n",
     "\n",
     "\n",
-    "epochs = 10\n",
+    "epochs = 1\n",
     "#5-fold cross validation\n",
     "score = []\n",
     "kf = KFold(n_splits=5,shuffle=True)\n",
@@ -556,9 +557,9 @@
     "    cn=getConvNet()\n",
     "    cn.compile(loss='binary_crossentropy', optimizer='adam')\n",
     "    cn.fit(X[train],y[train],epochs=epochs,batch_size=64,verbose=1)\n",
-    "    y_train_prob = cn.predict_proba(X[train])\n",
-    "    y_train_pred,threshold=formalizePrediction(y_train_prob,y[train],0.001)\n",
-    "    y_val_pred = 1*(cn.predict_proba(X[val])>threshold)    \n",
+    "    y_train_pred = cn.predict(X[train],batch_size=32, verbose=1)\n",
+    "    threshold=getThreshold(y_train_pred,y[train],0.001)\n",
+    "    y_val_pred = 1*(cn.predict(X[val],batch_size=32, verbose=1)>threshold)    \n",
     "    score.append(f1_score(y[val], y_val_pred, average='micro'))\n",
     "print(\"F1 Score:\", np.mean(score),\"+/-\", np.std(score))"
    ]
