--- a/image_project.ipynb
+++ b/image_project.ipynb
@@ -180,9 +180,10 @@
    "source": [
     "example=3\n",
     "img = image_load_func(img_list[example])\n",
+    "cmaps = [plt.cm.Reds_r, plt.cm.Greens_r, plt.cm.Blues_r]\n",
     "for l in range(3):\n",
     "    plt.subplot(1, 4, l+1)\n",
-    "    plt.imshow(img[:,:,l])\n",
+    "    plt.imshow(img[:,:,l],cmap=cmaps[l])\n",
     "    plt.axis('off')\n",
     "plt.subplot(1, 4, 4)\n",
     "plt.imshow(img)\n",
